--- a/CMSC250/main.tex
+++ b/CMSC250/main.tex
@@ -92,6 +92,8 @@
 \include{oct/oct10}
 \include{oct/oct12}
 \include{oct/oct17}
+\include{oct/oct19}
+\include{oct/oct24}
 
 \begin{thebibliography}{9}
 \bibitem{discretetextbook} 
